# arkime-mcp-server

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_zh.md  E2E_IMPLEMENTATION_SUMMARY.md  MIGRATION.md  README.md  README_zh.md  TEST_SUMMARY.md  config.example.yaml  examples.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_basic.py
.github/workflows/: tests.yml
arkime_mcp_server/: __init__.py  client.py  config.py  server.py  utils.py
skills/: README.md  arkime_skills.yaml
skills/examples/: README.md  anthropic_converter.py  autogen_config.py  dify_workflow.yaml  langchain_agent.py  openai_converter.py
skills/playbooks/: README.md  alert_triage.md  data_exfiltration_hunt.md  dns_tunnel_detection.md  host_forensics.md
skills/tests/: validate_skills.py
src/: arkime-client.ts  index.ts
tests/: E2E_TESTS.md  README.md  __init__.py  test_client.py  test_config.py  test_e2e.py  test_utils.py
