[project]
name = "arkime-mcp-server"
version = "1.0.0"
description = "MCP server for Arkime full packet capture — session search, network investigation, and capture health"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "arkime", "pcap", "network"]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
arkime-mcp-server = "arkime_mcp_server.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["arkime_mcp_server"]
